# musicsort

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: taxonomy.md
src/musicsort/: __init__.py  config.py  notifications.py
src/musicsort/autoimport/: audit.py  categorizer.py  cli.py  cli_rekordbox.py  fingerprint_db.py  fingerprinter.py  genres.yaml  hasher.py  mover.py  quality.py  quarantine.py  reader.py  service.py  taxonomy.py  taxonomy_seed.md  watch.py
src/musicsort/autoimport/genres/: apple.yaml  bandcamp.yaml  beatport.yaml  generic.yaml
src/musicsort/rekordbox/: __init__.py  backup.py  drain.py  process.py  writer.py
tests/: conftest.py  test_audit.py  test_categorizer.py  test_cli.py  test_cli_rekordbox.py  test_config.py  test_fingerprint_db.py  test_fingerprinter.py  test_hasher.py  test_mover.py  test_mover_rekordbox_hook.py  test_notifications.py  test_quality.py  test_quarantine.py  test_reader.py  test_rekordbox_backup.py  test_rekordbox_drain.py  test_rekordbox_queue.py  test_service.py  test_smoke.py  test_taxonomy.py  test_watch.py
tests/fixtures/: dedup_golden.csv
