[project]
name = "musicsort"
version = "0.1.0"
description = "AutoImport-style watcher: tag-driven routing, fingerprint dedup, and quality-upgrade replacement for ~/Music/Library/"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Robert Calise", email = "github@bob.is" }]
license = { text = "MIT" }

dependencies = [
    "mutagen>=1.47",
    "pyacoustid>=1.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyrekordbox>=0.4.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "watchdog>=4.0",
]

[project.scripts]
musicsort = "musicsort.autoimport.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musicsort"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/musicsort"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
